Fixed test classes ;styled scrollbar for topic list selection component; modified logic when user clicks on selectionbox

--- a/src/lwc/portalTopicComboSearchBox/portalTopicComboSearchBox.css
+++ b/src/lwc/portalTopicComboSearchBox/portalTopicComboSearchBox.css
@@ -3,3 +3,20 @@
     left:	0px;
     pointer-events: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+	width: 6px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+  
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #D8D8D8;
+	border-radius: 1px;
+	width: 6px;
+}
